# optimus-ui

./: .gitignore  README.md  de.z_ray.OptimusUI.desktop  de.z_ray.OptimusUI.json  de.z_ray.OptimusUI.metainfo.xml  extract_pot.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
flatpak_build/: build.sh
optimusui/: __init__.py  bbswitch.py  const.py  meson.build  nouveau.py  optimus_ui.py  os_utils.py  pci_utils.py  prime_select.py  system_validator.py
optimusui/data/icons/: meson.build
optimusui/data/po/: LINGUAS  de_DE.po  it_IT.po  meson.build  nl_NL.po  optimusui.pot
